tests/e2e/function_return_app2.error
Error: syntax error in story at line 1, column 1

1|    function foo returns object
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^

E0153: Return type cannot be `object`.
