tests/e2e/function_return_app2.story
function foo returns object
    return app.secrets

a = foo()
a.b = 2
